[package]
name = "titan"
version = "206.11.0"
edition = "2021"

# ELITE OVERRIDE: Explicitly points to main.rs in the root of the titan folder
[[bin]]
name = "titan"
path = "main.rs"

[dependencies]
# Inherit optimized dependencies from workspace root
alloy = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
colored = { workspace = true }
core_affinity = { workspace = true }

# Titan Specific: Multi-channel broadcast support
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen_units = 1
panic = "abort"
